--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>Coin Clicker</title>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <!-- Add this line to include your favicon -->
+        <link rel="icon" type="image/x-icon" href="https://shdw-drive.genesysgo.net/5WRCJEgy7c1Wy3ewWdfJcAePMCaUq4asyuP8sRgTQZYq/favicon.ico" />
     </head>
 
     <body>
